# Pipeline-OS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.txt  FUNDING_DISCLOSURE.md  GOVERNANCE.md  LICENSE  PRIVACY.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  deny.toml  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
.vantadeck/: project.toml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
crates/detection/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: contracts.rs
crates/security/: Cargo.toml
docs/: APP_MANIFEST_SPEC.md  ARCHITECTURE.md  CONTRIBUTOR_LADDER.md  FUTURE_SCOPE.md  HEADLESS_MODE.md  PROJECT_SPEC.md  RFC_PROCESS.md  TOOL_HUB_SPEC.md  TRANSPARENCY.md
docs/release/: BLOCKERS.md  NATIVE_VALIDATION.md  RECOVERY.md  RELEASE.md
manifests/apps/: 3ds-max.json  affinity-designer.json  affinity-photo.json  after-effects.json  aseprite.json  blender.json  cinema-4d.json  davinci-resolve.json  gimp.json  git-lfs.json  git.json  godot.json  houdini.json  illustrator.json  krita.json  maya.json  nuke.json  perforce.json  photoshop.json  premiere-pro.json  rider.json  substance-designer.json  (+6 more)
rfcs/: 0000-template.md  0001-desktop-ui-architecture.md
schemas/: app-manifest.schema.json  cli-envelope.schema.json  health-result.schema.json  project.schema.json  tool-manifest.schema.json
scripts/: validate-contracts.mjs
(+65 files in other folders)
